# Spotify-stack

./: .gitignore  CONTEXT.md  ONRAMP.md  README.md  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
.githooks/: pre-commit
.github/prompts/: plan-issue.md
.github/workflows/: agent-plan.yml  agent-task.yml  ci.yml  fleet-run.yml
agent-config/: mcp.json  settings.json
agent-config/hooks/: stop-verify.mjs
apps/operator-desktop/: index.html  package.json  tsconfig.json
apps/operator-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/operator-desktop/src-tauri/capabilities/: default.json
apps/operator-desktop/src-tauri/src/: lib.rs  main.rs
demo-repos/demo-feed-service/: README.md  package-lock.json  package.json  server.js
demo-repos/demo-swift-package/: Package.swift  README.md
demo-repos/demo-ts-service/: README.md  eslint.config.js  package-lock.json  package.json  tsconfig.json
docs/: codebase-knowledge-prior-art-research.md  conductor-ui-ux-research.md  knowledge-layer-prototype-comparison.md  knowledge-layer-spec.md
docs/adr/: 0001-tolerant-reader-wire-contract.md  0002-model-usage-evidence-contract.md
docs/agents/: issue-tracker.md
docs/experiments/: knowledge-payback-discrimination.md
fleet/: ledger.jsonl  repos.yaml
prototype/knowledge-layer/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
scripts/: bootstrap-github.sh  check-scrub.sh  knowledge-payback-e2e.sh  repo-language.ts  task-matrix.ts  validate-task.ts
tasks/: 004-upstream-failure-mode-tests.md  TEMPLATE.md
(+64 files in other folders)
