[package]
name = "fleet-operator"
version = "0.1.0"
description = "Optional desktop operator shell for Fleet"
authors = ["Fleet contributors"]
edition = "2021"

[lib]
name = "fleet_operator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
